--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               </p>
               <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
               <h3>Ian Nyavuke</h3>
-              <h4>Store Owner</h4>
+              <h4>Assistant manager</h4>
             </div>
           </div><!-- End testimonial item -->
 
